cluster/gitlab/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Git and everything but the kitchen sink
    gethomepage.dev/group: Cloud
    gethomepage.dev/icon: gitlab
    gethomepage.dev/name: Gitlab
    gethomepage.dev/pod-selector: "app=webservice"
spec:
  parentRefs:
    - name: internal
      namespace: agentgateway
  hostnames:
    - gitlab.sko.ai
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitlab-webservice-default
          port: 8181
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-registry
spec:
  parentRefs:
    - name: internal
      namespace: agentgateway
  hostnames:
    - registry.sko.ai
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitlab-registry
          port: 5000
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: gitlab-shell
spec:
  parentRefs:
    - name: internal
      namespace: agentgateway
      sectionName: ssh
  rules:
    - backendRefs:
        - name: gitlab-gitlab-shell
          port: 22
